kube/backend-1.yaml

kind: Service
apiVersion: v1
metadata:
  name: backend-1
spec:
  selector:
    app: backend-1
  ports:
    - port: 8080 # Default port for image
